--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -62,6 +62,11 @@ $danger:           #f83e4b;
 $warning:          #F5A623;
 $info:             #09ABF6;
 
+$orange:           #f15a29;
+$pink:             #e80a89;
+$link:             #42b983;
+
+
 // Tables
 $table-border-color: #d0d0d0 !default;
 $table-striped-color: #f2f2f2 !default;
