hack to get chrome to autoplay..
i get why they did it but also makes gifs almost essential

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
   <a href="{{ site.url }}/">
     <!-- <video src="{{ site.url }}/img/{{ author.avatar }}" poster="{{ site.url }}/img/logo.PNG" width="150px" height="150px" controls preload></video> -->
     
-    <video id="videoElement" width="150" height="150" autoplay="autoplay">
+    <video id="videoElement" width="150" height="150" playsinline autoplay muted loop>
       <source src="{{ site.url }}/img/{{ author.avatar }}" type="video/mp4">
       Your browser does not support the video tag.
    </video>
