--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -155,6 +155,14 @@ a.read-more {
   }
 }
 
+#row {
+  display: inline-flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  
+}
+
+
 // Shares Buttons
 .share-buttons {
   padding-top: 1em;
