--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,11 +21,27 @@
       <li class="nav-item">
         <a href="{{ site.url }}/">home</a>
       </li>
-      {% for page in site.pages %} {% if page.title %}
+
+      <!-- Removed tags page and want to display in certain order-->
+      <!--{% for page in site.pages %} {% if page.title %}
       <li class="nav-item">
         <a href="{{ site.url }}{{ page.url }}">{{ page.title }}</a>
       </li>
-      {% endif %} {% endfor %}
+      {% endif %} {% endfor %}-->
+    
+      <li class="nav-item">
+        <a href="{{ site.url }}/archive">archive</a>
+      </li>
+          
+      <li class="nav-item">
+        <a href="{{ site.url }}/categories">categories</a>
+      </li>
+
+          
+      <li class="nav-item">
+        <a href="{{ site.url }}/gallery">gallery</a>
+      </li>
+
     </ul>
   </nav>
   {% include social-links.html %}
