Update: spatial post update

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -10,8 +10,8 @@ https://stackoverflow.com/a/29039740/3133059
     {% for img in row %}
         <p> 
             <a href="{{ site.url }}{{ img.url }}" target="_blank">
-                <img src="{{ site.url }}{{ img.url }}" alt="{{ img.alt }}" width=500/>
-                <br>
+                <img src="{{ site.url }}{{ img.url }}" alt="{{ img.alt }}" width="500"/>
+                
             </a>
         </p> 
     {% endfor %}
