--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -147,11 +147,23 @@ a.read-more {
     vertical-align: middle;
   }
 }
+
 .post-image-feature {
   margin-bottom: 40px;
+  float:left;
+  width: 200px;
+  padding-right:20px;
   .feature-image {
-    width: 100%;
-    max-height: 500px;
+    width: 100px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .post-image-feature {
+    display:none;
+    .feature-image {
+      display:none;
+    }
   }
 }
 
