Artstation replace behance
need to update the rest of the font awesome
need to format the art station page
VR Interaction
Unity Ray Tracing
Enviornments

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,4 +53,9 @@
   <link rel="shortcut icon" href="{{ site.url }}/favicon.ico?">
   <!-- 32x32 -->
   <link rel="shortcut icon" href="{{ site.url }}/favicon.png">
+
+  <!-- Font Awesome 6-->
+  <script src="https://kit.fontawesome.com/62f8d7fb62.js" crossorigin="anonymous"></script>
+
+
 </head>
