--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -24,6 +24,7 @@
     {% if author.skype %}<li><a href="skype:{{ author.skype }}" class="social-link-item" target="_blank"><i class="fa fa-fw fa-skype"></i></a></li>{% endif %}
     {% if author.xing %}<li><a href="http://www.xing.com/profile/{{ author.xing }}" class="social-link-item" target="_blank"><i class="fa fa-fw fa-xing"></i></a></li>{% endif %}
     {% if author.behance %}<li><a href="https://www.behance.net/{{ author.behance }}" class="social-link-item" target="_blank"><i class="fa fa-fw fa-behance"></i></a></li>{% endif %}
+    {% if author.artstation %}<li><a href="https://www.artstation.com/{{ author.artstation }}" class="social-link-item" target="_blank"><i class="fa-brands fa-artstation"></i></a></li>{% endif %}
     {% if author.instagram %}<li><a href="http://instagram.com/{{ author.instagram }}" class="social-link-item" target="_blank"><i class="fa fa-fw fa-instagram"></i></a></li>{% endif %}
     {% if author.tumblr %}<li><a href="http://{{ author.tumblr }}.tumblr.com" class="social-link-item" target="_blank"><i class="fa fa-fw fa-tumblr"></i></a></li>{% endif %}
     {% if author.github %}<li><a href="http://github.com/{{ author.github }}" class="social-link-item" target="_blank"><i class="fa fa-fw fa-github"></i></a></li>{% endif %}
