--- a/_layouts/post_listing.html
+++ b/_layouts/post_listing.html
@@ -2,6 +2,15 @@
 layout: default
 ---
 
+<!-- Announcement Banner -->
+<div class="announcement-banner">
+  <a href="https://store.steampowered.com/app/2603560/Pixel_Arcade/" class="announcement-link" target="_blank">
+    👉 Wishlist Pixel Arcade on Steam 🥳
+  </a>
+</div>
+
+
+
 {% for post in site.posts %}
 <section class="post">
 
