--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -158,6 +158,35 @@ a.read-more {
   }
 }
 
+.announcement-banner {
+  width: 100%;
+  height: 50px;
+  background-color: #EA2E99; /* Change this color to fit your site's color scheme */
+  color: white; /* Text color */
+  display: flex; /* Enable flexbox */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  font-size: 20px; /* Font size for the banner text */
+  font-weight: bold;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000; /* Ensure it stays on top */
+}
+.announcement-link {
+  color: white; /* Text color */
+  font-size: 20px; /* Font size for the banner text */
+  
+  text-decoration: none; /* Remove underline */
+}
+
+.announcement-link:hover {
+  color: black; /* Change text color on hover */
+}
+
+
+
+
 @media only screen and (max-width: 1024px) {
   .post-image-feature {
     display:none;
