remove from home email list now on blog post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-
+<head>  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/e2658c92ff155c959e5006921/1f253de6abdbf6676da7931ab.js");</script>
+</head>
 <a class="btn" href= "{{ site.url }}/" >
   Home
 </a>
